# glasel-network

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  glasel-network-architecture.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish-sdk.yml  release.yml
contracts/: .env.example  README.md  foundry.toml  verify.sh
contracts/deployments/: robinhood-mainnet.json
contracts/lib/openzeppelin-contracts-upgradeable/contracts/access/: AccessControlUpgradeable.sol
contracts/lib/openzeppelin-contracts-upgradeable/contracts/finance/: VestingWalletUpgradeable.sol
contracts/lib/openzeppelin-contracts-upgradeable/contracts/governance/: GovernorUpgradeable.sol  TimelockControllerUpgradeable.sol
contracts/lib/openzeppelin-contracts-upgradeable/contracts/metatx/: ERC2771ForwarderUpgradeable.sol
contracts/lib/openzeppelin-contracts-upgradeable/contracts/mocks/: AuthorityMockUpgradeable.sol  DummyImplementationUpgradeable.sol  ERC3156FlashBorrowerMockUpgradeable.sol  MerkleTreeMockUpgradeable.sol  StatelessUpgradeable.sol  WithInit.sol
contracts/lib/openzeppelin-contracts-upgradeable/contracts/utils/: MulticallUpgradeable.sol
contracts/lib/openzeppelin-contracts/contracts/governance/: Governor.sol  IGovernor.sol
contracts/lib/openzeppelin-contracts/contracts/metatx/: ERC2771Forwarder.sol
contracts/lib/openzeppelin-contracts/contracts/mocks/: AuthorityMock.sol
contracts/script/: Deploy.s.sol  RedeployToken.s.sol
contracts/src/: ConfidentialBase.sol
contracts/src/apps/: ConfidentialVote.sol  DarkPool.sol  SealedBidAuction.sol
contracts/src/core/: ClusterManager.sol  ComputationCoordinator.sol  ComputationRegistry.sol  FeeOracle.sol  MXEFactory.sol  NodeRegistry.sol  StakingManager.sol
contracts/src/governance/: GlaselGovernor.sol
contracts/src/interfaces/: IClusterManager.sol  IComputationCoordinator.sol  IComputationRegistry.sol  IFeeOracle.sol  IGlaselToken.sol  IMXEFactory.sol  INodeRegistry.sol  IStakingManager.sol
contracts/src/libraries/: BLS.sol  ThresholdSig.sol  Types.sol
contracts/src/mocks/: MockCoordinator.sol  StubFeeOracle.sol
contracts/src/token/: GlaselToken.sol
contracts/test/fixtures/: bls_vector.json
contracts/test/helpers/: ProtocolFixture.sol
contracts/test/integration/: BlsSubmit.t.sol  Deploy.t.sol  Lifecycle.t.sol
contracts/test/invariant/: StakingInvariants.t.sol
contracts/test/unit/: AuditRegression.t.sol  BLS.t.sol  ClusterManager.t.sol  ComputationRegistryFee.t.sol  ConfidentialApps.t.sol  ConfidentialBaseMock.t.sol  DarkPool.t.sol  GlaselToken.t.sol  Governor.t.sol  MXEFactory.t.sol  NodeRegistry.t.sol  StakingManager.t.sol
docs/: AUDIT-PREP.md  AUDIT.md  COMPATIBILITY.md  DEPLOY.md  DISCLAIMER.md  LAUNCH-CHECKLIST.md  MPC-MALICIOUS.md  NODE-OPERATOR.md  PRODUCTION-READINESS.md  REBRAND-GLASEL.md  ROBINHOOD-CHAIN-MIGRATION.md  RPC.md  RUNBOOK.md  SECURITY-MODEL.md  TESTNET.md  WHAT-IS-GLASEL.md
node/: Cargo.toml  README.md
node/crates/glasel-bls/: Cargo.toml  README.md
node/crates/glasel-bls/src/: bls.rs  dkg.rs  lib.rs
node/crates/glasel-circuit/: Cargo.toml
node/crates/glasel-circuit/examples/: dsl_auction.rs
node/crates/glasel-circuit/src/: builder.rs  dsl.rs  eval.rs  examples.rs  ir.rs  lib.rs  mpspdz.rs  optimize.rs  serialize.rs
node/crates/glasel-circuit/tests/: circuit.rs  mascot_e2e.rs
node/crates/glasel-crypto/: Cargo.toml
node/crates/glasel-crypto/src/: crypto.rs  field.rs  lib.rs  rescue.rs
node/crates/glasel-crypto/tests/: vectors.json  vectors.rs
node/crates/glasel-mpc/: Cargo.toml  README.md  demo.sh
node/crates/glasel-mpc/examples/: noise_keygen.rs
node/crates/glasel-mpc/src/: bgw.rs  dkg.rs  lib.rs  net.rs  secure.rs  session.rs  shamir.rs
node/crates/glasel-mpc/tests/: inproc.rs  multiproc.rs  secure_mesh.rs
node/crates/glaseld/: Cargo.toml
node/crates/glaseld/src/: chain.rs  config.rs  dkg_signer.rs  engine.rs  main.rs  malicious.rs  metrics.rs  mpc_engine.rs  mpc_session.rs  retry.rs  scheduler.rs  signer.rs
node/crates/glaselvm/: Cargo.toml  README.md
node/crates/glaselvm/src/: authoring.rs  chain.rs  main.rs  manifest.rs
node/deploy/: Dockerfile  glaseld.service
node/scripts/: mascot-multihost.sh  setup-mpspdz.sh  test-mascot-multihost.sh
scripts/: deploy-robinhood.sh  install.sh
sdk/: README.md  package.json  tsconfig.build.json  tsconfig.json  typedoc.json
sdk/examples/: README.md  confidential-order.test.ts  confidential-order.ts  quickstart.mjs
sdk/scripts/: bls.ts  chain.ts  e2e-abi.ts  e2e-node.ts  e2e.ts  gen-mpc-configs.ts  gen-vectors.ts  gls-e2e.mjs  golive-demo.ts  golive-wire.ts  grant-minter.ts  loadtest.ts  set-fees.ts  testnet.ts
sdk/src/: abi.ts  client.ts  codec.ts  crypto.ts  field.ts  index.ts  permit.ts  rescue.ts  x25519.ts
sdk/test/: codec.test.ts  crypto.test.ts  permit.test.ts  rescue.test.ts
subgraph/: schema.graphql  subgraph.yaml
subgraph/src/: mapping.ts
web/: .env.example  .gitignore  README.md  mdx-components.tsx  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/faucet/: route.ts
web/src/app/api/status/: route.ts
web/src/app/blog/: page.tsx
web/src/app/blog/(post)/: layout.tsx
web/src/app/docs/: layout.tsx  page.mdx
web/src/app/docs/architecture/: page.mdx
web/src/app/docs/circuits/: page.mdx
web/src/app/docs/concepts/: page.mdx
web/src/app/docs/encryption/: page.mdx
web/src/app/faucet/: page.tsx
web/src/app/playground/: page.tsx
web/src/app/status/: page.tsx
web/src/components/: aurora-shader.tsx  callout.tsx  code-window.tsx  copy-button.tsx  deployments.tsx  docs-pager.tsx  docs-sidebar.tsx  flow-diagram.tsx  footer.tsx  logo.tsx  mdx-pre.tsx  motion-item.tsx  motion.tsx  nav.tsx  post-header.tsx  scroll-progress.tsx  toc.tsx
web/src/components/three/: scene.tsx  stage.tsx
web/src/lib/: blog.ts  chain.ts  playground.ts  scroll-store.ts  site.ts  utils.ts
(+75 files in other folders)
