[workspace]
resolver = "2"
members = ["crates/glasel-crypto", "crates/glasel-circuit", "crates/glasel-mpc", "crates/glasel-bls", "crates/glaseld", "crates/glaselvm"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Glaselxyz/glasel-network"
homepage = "https://github.com/Glaselxyz/glasel-network"
authors = ["Glasel"]
rust-version = "1.75"

[workspace.dependencies]
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
sha3 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
