[package]
name = "glasel-circuit"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
glasel-crypto = { path = "../glasel-crypto" }
num-bigint = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
