[package]
name = "glasel-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
num-bigint = { workspace = true }
num-traits = { workspace = true }
sha3 = { workspace = true }
hex = { workspace = true }
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand = "0.8"

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
