[package]
name = "glasel-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Glasel Network cryptography: F_p field arithmetic, Rescue-Prime hash/cipher, and X25519 sealing. Byte-compatible with the @glasel/client TypeScript SDK."

[dependencies]
num-bigint = { workspace = true }
num-traits = { workspace = true }
sha3 = { workspace = true }
hex = { workspace = true }
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand = "0.8"

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
