[package]
name = "glasel-mpc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
glasel-crypto = { path = "../glasel-crypto" }
glasel-circuit = { path = "../glasel-circuit" }
glasel-bls = { path = "../glasel-bls" }
num-bigint = { workspace = true }
num-traits = { workspace = true }
rand = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
# Authenticated + encrypted node transport (Noise protocol). On by default —
# the mesh is secure unless a party explicitly opts out (`--insecure`, for local
# debugging only).
snow = "0.9"

[[bin]]
name = "glaseld-party"
path = "src/bin/party.rs"
